Fixed modals on ShiftLogs and added updated to the emergency contacts

--- a/src/Components/EmergencyContactsUpdater/EmergencyContactsUpdater.css
+++ b/src/Components/EmergencyContactsUpdater/EmergencyContactsUpdater.css
@@ -6,9 +6,9 @@ main.EmergencyContactsUpdaterContainer section.ShiftUpdaterForm {
     bottom: 0;
     left: 0;
     right: 10;
+    margin: auto auto;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.418);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,12 +19,14 @@ main.EmergencyContactsUpdaterContainer form.InputFormUpdater {
     border-style: none;
     border-radius: 5px;
     background-color: white;
-    display: flex;
-    flex-direction: column;
     padding: 15px;
     margin: 10px;
-    height: 70%;
+    height: 60%;
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-shadow: 0px 20px 40px 26px rgba(89,89,89,0.8); 
+    box-shadow: 0px 20px 40px 26px rgba(89,89,89,0.8);
 }
 
 
