--- a/src/Components/ShiftLogUpdater/ShiftLogUpdater.css
+++ b/src/Components/ShiftLogUpdater/ShiftLogUpdater.css
@@ -3,21 +3,17 @@ main.ShiftLogUpdaterContainer form.hidden {
 }
 
 main.ShiftLogUpdaterContainer section.ShiftUpdaterForm {
-    /* position: absolute; */
-    /* top: 0;
+    position: absolute;
+    top: 0;
     bottom: 0;
     left: 0;
-    right: 10; */
-    position: relative;
+    right: 10;
     margin: auto auto;
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 10;
-    box-shadow: 0 0 500px 500px rgba(0, 0, 0, 0.3);
-
 }
 
 main.ShiftLogUpdaterContainer section.UpdateClickableSection {
